--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,18 @@
-<v-button></v-button>
-<h1>Vitor</h1>
+<register-school></register-school> <br><br>
+
+<p-table [value]="escola">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>nome</th>
+            <th>nivel</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-escola>
+        <tr>
+            <td>{{escola.nome}}</td>
+            <td>{{escola.nivel}}</td>
+        </tr>
+    </ng-template>
+</p-table>
+
+
