Funcionalidades crud, responsividade.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-
-<router-outlet></router-outlet>
+<p-megaMenu [model]="menu"></p-megaMenu>
+<div id="mainPage">
+    <router-outlet id="router"></router-outlet>
+</div>
