--- a/src/app/pages/register-school/register-school.component.scss
+++ b/src/app/pages/register-school/register-school.component.scss
@@ -7,9 +7,8 @@
     height: 100%;
 }
 
-#submitButton{
+.submitButton{
     display: flex;
-    align-items:flex-start;
     margin: 10px;
 }
 
@@ -21,7 +20,7 @@
 
 #divForm{
     display: grid;    
-    gap: 5px 10px;
+    gap: 25px 10px;
     grid-template: 
     "cnpj cnpj schoolName schoolName schoolName"
     "formAdress formAdress formAdress formAdress formAdress"
@@ -32,7 +31,7 @@
 #divFormAdress{
     display: grid;
     grid-area: formAdress;
-    gap: 5px 10px;
+    gap: 25px 10px;
     grid-template: 
     "street street street street schoolNumber"
     "zipCode district district city city"
@@ -79,4 +78,18 @@
 
 .phone{
     grid-area: phone;
+}
+
+@media(max-width: 768px){
+    
+    #divForm{
+        padding: 5px;
+        grid-template: 
+        "cnpj"
+        "schoolName"
+        "formAdress"
+        "phone"
+        "email"
+        ;
+    }  
 }
